JSAI/error/src/test/resources/base/builtins_boolean-obj2.js
x = new Boolean(true);
var x_ty = typeof(x)
print(x_ty)
var x_val = x.valueOf()
print(x_val)
x.a = false;
x_val = x.valueOf()
print(x_val)
print(x.a)
var res = x.a && true;
print(res)
res

